Fix: dark mode on projects page

--- a/styles/projects.css
+++ b/styles/projects.css
@@ -24,4 +24,7 @@ h2 {
 	h2 {
 		color: #fff;
 	}
+	.title p {
+		color: white;
+	}
 }
